--- a/cvx/param/cvx.yaml
+++ b/cvx/param/cvx.yaml
@@ -8,12 +8,11 @@ dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer
 goal_radius: 0.35    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
 drone_radius: 0.2  #(m) Used for collision checking
 
-N_whole: 10  #[-] Number of discretization points in the whole trajectory
-N_rescue: 7  #[-] Number of discretization points in the rescue path
+N_whole: 6  #[-] Number of discretization points in the whole trajectory
+N_safe: 6  #[-] Number of discretization points in the safe path
 
-factor_deltaT: 1.5
+factor_deltaT: 1.15
 factor_deltaTp: 2
-#If the drone switches too often to the safe path, decrease factor_deltaTp and increase factor_deltaTp
 
 min_states_deltaTp: 0 #20
 min_states_deltaT: 0  #15
@@ -43,12 +42,13 @@ gamma_whole: 4       #[-]
 gammap_whole: 10  #[-]
 increment_whole: 1 #[-]
 
-gamma_rescue: 4         #[-]
-gammap_rescue: 10    #[-]
-increment_rescue: 1   #[-]
+gamma_safe: 4         #[-]
+gammap_safe: 10    #[-]
+increment_safe: 1   #[-]
 
-max_poly: 2 #Should be less than N_whole and N_rescue
-dist_max_vertexes: 1 #[m] Maximum distance between two vertexes in the JPS before doing the cvx decomp (more vertexes are added to force this)
+max_poly_whole: 2 #Should be less than N_whole 
+max_poly_safe: 3 #Should be less than N_safe
+dist_max_vertexes: 4 #[m] Maximum distance between two vertexes in the JPS before doing the cvx decomp (more vertexes are added to force this)
 gurobi_threads: 1 #[threads] Number of threads that Gurobi will use. If computer is maxed out, threads=1 works faster!
 gurobi_verbose: 0 #Verbosity of Gurobi. 0 or 1
 
@@ -63,12 +63,3 @@ gurobi_verbose: 0 #Verbosity of Gurobi. 0 or 1
 # wdz: 4.0   #[m] world dimension in z
 # res: 0.15  #[m] cell dimension = resolution of the map
 
-
-
-# factor_initial_whole: 1.5
-# factor_final_whole: 10 #High final factor is usually not a problem. If it's infeasible, it is usually because dt_ is very small (factor very small)
-# factor_increment_whole: 3
-
-# factor_initial_rescue: 1.5
-# factor_final_rescue: 10
-# factor_increment_rescue: 1
