--- a/cvx/param/cvx.yaml
+++ b/cvx/param/cvx.yaml
@@ -24,15 +24,15 @@ w_max: 1            # [rd/s] Maximum angular velocity. 0.4 for Hardware
 alpha_filter_dyaw: 0.92  #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
 
 alpha_0_deg: 15         #[deg] threshold to ignore current JPS solution, and consider the old one. 0--> always decide
-z_ground: 0.35         #[m] points below this are considered ground
+z_ground: 0.1         #[m] points below this are considered ground
 z_max: 2         #[m] JPS is not allowed to give a solution that goes higher than this height
 inflation_jps: 0.35  #[m] The obstacles are inflated (to run JPS) by this amount
 factor_jps: 1  #[m] JPS is run with resolution=factor_jps*(resolution of the map)
 
 
-v_max: 3   #[m/s]  3
-a_max: 6   #[m/s2] 6
-j_max: 35  #[m/s3] 35
+v_max: 1.4   #[m/s]  3
+a_max: 1.4   #[m/s2] 6
+j_max: 5  #[m/s3] 35
 
 z_land: 0.02 #[m] z goal for landing
 
@@ -51,6 +51,13 @@ max_poly_safe: 3 #Should be less than N_safe
 dist_max_vertexes: 1.5 #[m] Maximum distance between two vertexes in the JPS before doing the cvx decomp (more vertexes are added to force this)
 gurobi_threads: 1 #[threads] Number of threads that Gurobi will use. If computer is maxed out, threads=1 works faster!
 gurobi_verbose: 0 #Verbosity of Gurobi. 0 or 1
+
+kw: 1
+kyaw: 2
+kalpha: 1.5
+
+kv: 1
+kdist: 0.8
 
 
 
