--- a/cvx/param/cvx.yaml
+++ b/cvx/param/cvx.yaml
@@ -21,9 +21,9 @@ Ra: 0.5            # [m] Minimum radius of the first sphere
 Ra_max: 6            # [m] Maximum radius of the first sphere
 Rb: 9.0             # [m] Radius of the second sphere
 w_max: 1            # [rd/s] Maximum angular velocity. 0.4 for Hardware
-alpha_filter_dyaw: 0.92  #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
+alpha_filter_dyaw: 0 #was 0.92  #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
 
-alpha_0_deg: 15         #[deg] threshold to ignore current JPS solution, and consider the old one. 0--> always decide
+alpha_0_deg: 150         #[deg] threshold to ignore current JPS solution, and consider the old one. 0--> always decide
 z_ground: 0.05         #[m] points below this are considered ground
 z_max: 0.3         #[m] JPS is not allowed to give a solution that goes higher than this height
 inflation_jps: 0.35  #[m] The obstacles are inflated (to run JPS) by this amount
