--- a/cvx/param/cvx.yaml
+++ b/cvx/param/cvx.yaml
@@ -6,7 +6,7 @@ use_vel: false # use velocity. If false, r2=r1;
 
 dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer pubGoal
 goal_radius: 0.35    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
-drone_radius: 0.2  #(m) Used for collision checking
+drone_radius: 0.35  #(m) Used for collision checking
 
 N_whole: 10  #[-] Number of discretization points in the whole trajectory
 N_safe: 10  #[-] Number of discretization points in the safe path
@@ -26,43 +26,43 @@ alpha_filter_dyaw: 0 #was 0.92  #[] Filter parameter for dyaw, \in [0,1]. Higher
 alpha_0_deg: 150         #[deg] threshold to ignore current JPS solution, and consider the old one. 0--> always decide
 z_ground: 0.05         #[m] points below this are considered ground
 z_max: 0.3         #[m] JPS is not allowed to give a solution that goes higher than this height
-inflation_jps: 0.4  #[m] The obstacles are inflated (to run JPS) by this amount
+inflation_jps: 0.35  #[m] The obstacles are inflated (to run JPS) by this amount
 factor_jps: 1  #[m] JPS is run with resolution=factor_jps*(resolution of the map)
 
 
-v_max: 1   #[m/s]  1.4
-a_max: 2   #[m/s2] 1.4
-j_max: 5  #[m/s3] 35
+v_max: 1.3   #[m/s]  1.4
+a_max: 10   #[m/s2] 1.4
+j_max: 30  #[m/s3] 35
 
 z_land: 0.02 #[m] z goal for landing
 
 
 #Factors for time allocation
-gamma_whole: 4       #[-]
+gamma_whole: 1       #[-]
 gammap_whole: 10  #[-]
-increment_whole: 1 #[-]
+increment_whole: 0.5 #[-]
 
-gamma_safe: 4         #[-]
+gamma_safe: 1         #[-]
 gammap_safe: 10    #[-]
-increment_safe: 1   #[-]
+increment_safe: 0.5   #[-]
 
-max_poly_whole: 2 #Should be less than N_whole 
+max_poly_whole: 3 #Should be less than N_whole 
 max_poly_safe: 3 #Should be less than N_safe
 dist_max_vertexes: 0.5 #[m] Maximum distance between two vertexes in the JPS before doing the cvx decomp (more vertexes are added to force this)
 gurobi_threads: 1 #[threads] Number of threads that Gurobi will use. If computer is maxed out, threads=1 works faster!
 gurobi_verbose: 0 #Verbosity of Gurobi. 0 or 1
 
-kw: 0.8
-kyaw: 0.6
+kw: 1
+kyaw: 1.5
 kdalpha: 0.0
-kalpha: 0.75
+kalpha: 3
 
 kv: 1
-kdist: 0.4
+kdist: 1
 
+delta_a: 0.6
 
-
-#q: 100  #[-] weight to the 2nd term of the cost function. If it's very big (>1000), Gurobi fails!! (numerical issues)
+q: 100  #[-] weight to the 2nd term of the cost function. If it's very big (>1000), Gurobi fails!! (numerical issues)
 
 
 # The following values are taken from the global_mapper.yaml
