--- a/cvx/param/cvx.yaml
+++ b/cvx/param/cvx.yaml
@@ -5,54 +5,55 @@ visual: true #publish visualization stuff
 use_vel: false # use velocity. If false, r2=r1;
 
 dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer pubGoal
-goal_radius: 0.35    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
-drone_radius: 0.45  #(m) Used for collision checking
+goal_radius: 0.1    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
+drone_radius: 0.3  #(m) Used for collision checking
 
 
-N_whole: 10  #[-] Number of discretization points in the whole trajectory
-N_safe: 10  #[-] Number of discretization points in the safe path
+N_whole: 10 #[-] Number of discretization points in the whole trajectory
+N_safe: 10 #[-] Number of discretization points in the safe path
 
-factor_deltaT: 1.15
+factor_deltaT: 2
 factor_deltaTp: 2
 
 min_states_deltaTp: 0 #20
 min_states_deltaT: 0  #15
 
 Ra: 0.5            # [m] Minimum radius of the first sphere
-Ra_max: 4            # [m] Maximum radius of the first sphere
+Ra_max: 8            # [m] Maximum radius of the first sphere
 Rb: 9.0             # [m] Radius of the second sphere
-w_max: 4            # [rd/s] Maximum angular velocity. 0.4 for Hardware
+w_max: 3          # [rd/s] Maximum angular velocity. 0.4 for Hardware
 alpha_filter_dyaw: 0 #was 0.92  #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
 
-alpha_0_deg: 150         #[deg] threshold to ignore current JPS solution, and consider the old one. 0--> always decide
-z_ground: 0         #[m] points below this are considered ground
-z_max: 0.3         #[m] JPS is not allowed to give a solution that goes higher than this height
-inflation_jps: 0.45  #[m] The obstacles are inflated (to run JPS) by this amount
+alpha_0_deg: 1500         #[deg] threshold to ignore current JPS solution, and consider the old one. 0--> always decide
+z_ground: 0.2         #[m] points below this are considered ground
+z_max: 2         #[m] JPS is not allowed to give a solution that goes higher than this height
+inflation_jps: 0.6  #[m] The obstacles are inflated (to run JPS) by this amount
 factor_jps: 1  #[m] JPS is run with resolution=factor_jps*(resolution of the map)
 
 
-v_max: 1   #[m/s]  1.4
-a_max: 7   #[m/s2] 1.4
-j_max: 13  #[m/s3] 35
+v_max: 6.0   #[m/s]  1.4
+a_max: 0.5   #[m/s2] 1.4
+j_max: 30.0  #[m/s3] 35
 
 z_land: 0.02 #[m] z goal for landing
 
 
 #Factors for time allocation
-gamma_whole: 1       #[-]
+gamma_whole: 10       #[-]
 gammap_whole: 10  #[-]
-increment_whole: 0.5 #[-]
+increment_whole: 1 #[-]
 
-gamma_safe: 1         #[-]
+gamma_safe: 10         #[-]
 gammap_safe: 10    #[-]
-increment_safe: 0.5   #[-]
+increment_safe: 1   #[-]
 
 max_poly_whole: 3 #Should be less than N_whole 
 max_poly_safe: 3 #Should be less than N_safe
-dist_max_vertexes: 0.5 #[m] Maximum distance between two vertexes in the JPS before doing the cvx decomp (more vertexes are added to force this)
+dist_max_vertexes: 5 #[m] Maximum distance between two vertexes in the JPS before doing the cvx decomp (more vertexes are added to force this)
 gurobi_threads: 1 #[threads] Number of threads that Gurobi will use. If computer is maxed out, threads=1 works faster!
 gurobi_verbose: 0 #Verbosity of Gurobi. 0 or 1
 
+#Parameters for the ground robot:
 kw: 1
 kyaw: 1.5
 kdalpha: 0.0
@@ -61,14 +62,9 @@ kalpha: 3
 kv: 2
 kdist: 2
 
-delta_a: 1
+delta_a: 0.5
+delta_H: 0.5
 
-q: 100  #[-] weight to the 2nd term of the cost function. If it's very big (>1000), Gurobi fails!! (numerical issues)
+use_faster: false  #if false, it will plan only in free space
 
-
-# The following values are taken from the global_mapper.yaml
-# wdx: 20.0  #[m] world dimension in x
-# wdy: 20.0  #[m] world dimension in y
-# wdz: 4.0   #[m] world dimension in z
-# res: 0.15  #[m] cell dimension = resolution of the map
 
