--- a/cvx/param/cvx.yaml
+++ b/cvx/param/cvx.yaml
@@ -2,8 +2,6 @@
 
 use_ff: true # use feedforward
 visual: true #publish visualization stuff
-use_vel: false # use velocity. If false, r2=r1;
-
 dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer pubGoal
 goal_radius: 0.1    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
 drone_radius: 0.3  #(m) Used for collision checking
@@ -12,16 +10,17 @@ drone_radius: 0.3  #(m) Used for collision checking
 N_whole: 10 #[-] Number of discretization points in the whole trajectory
 N_safe: 10 #[-] Number of discretization points in the safe path
 
-factor_deltaT: 2
-factor_deltaTp: 2
+factor_deltaT: 3
+factor_deltaTp: 3
+factor_min_deltaT: 1
 
 min_states_deltaTp: 0 #20
 min_states_deltaT: 0  #15
 
 Ra: 0.5            # [m] Minimum radius of the first sphere
-Ra_max: 8            # [m] Maximum radius of the first sphere
+Ra_max: 15            # [m] Maximum radius of the first sphere
 Rb: 9.0             # [m] Radius of the second sphere
-w_max: 3          # [rd/s] Maximum angular velocity. 0.4 for Hardware
+w_max: 1          # [rd/s] Maximum angular velocity. 0.4 for Hardware
 alpha_filter_dyaw: 0 #was 0.92  #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
 
 alpha_0_deg: 1500         #[deg] threshold to ignore current JPS solution, and consider the old one. 0--> always decide
@@ -32,7 +31,7 @@ factor_jps: 1  #[m] JPS is run with resolution=factor_jps*(resolution of the map
 
 
 v_max: 6.0   #[m/s]  1.4
-a_max: 0.5   #[m/s2] 1.4
+a_max: 6.0   #[m/s2] 1.4
 j_max: 30.0  #[m/s3] 35
 
 z_land: 0.02 #[m] z goal for landing
@@ -47,8 +46,8 @@ gamma_safe: 10         #[-]
 gammap_safe: 10    #[-]
 increment_safe: 1   #[-]
 
-max_poly_whole: 3 #Should be less than N_whole 
-max_poly_safe: 3 #Should be less than N_safe
+max_poly_whole: 4 #Should be less than N_whole 
+max_poly_safe: 4 #Should be less than N_safe
 dist_max_vertexes: 5 #[m] Maximum distance between two vertexes in the JPS before doing the cvx decomp (more vertexes are added to force this)
 gurobi_threads: 1 #[threads] Number of threads that Gurobi will use. If computer is maxed out, threads=1 works faster!
 gurobi_verbose: 0 #Verbosity of Gurobi. 0 or 1
@@ -62,9 +61,12 @@ kalpha: 3
 kv: 2
 kdist: 2
 
-delta_a: 0.5
-delta_H: 0.5
+delta_a: 0.7
+delta_H: 0.7
 
-use_faster: false  #if false, it will plan only in free space
+use_faster: true  #if false, it will plan only in free space
+keep_optimizing_after_found: true #if true, the planner will keep optimizing after having found a trajectory (until the drone arrives at point A)
+use_smart_deltaT: true #if true, A will be tried be be chosen in R{k-1} (unless there is too little time remaining, given by factor_min_deltaT)
+
 
 
