--- a/cvx/param/cvx.yaml
+++ b/cvx/param/cvx.yaml
@@ -6,15 +6,12 @@ dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer
 goal_radius: 0.1    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
 drone_radius: 0.3  #(m) Used for collision checking
 
-
-N_whole: 10 #[-] Number of discretization points in the whole trajectory
-N_safe: 10 #[-] Number of discretization points in the safe path
+N_whole: 20 #[-] Number of discretization points in the whole trajectory
+N_safe: 20 #[-] Number of discretization points in the safe path
 
 factor_deltaT: 3
-factor_deltaTp: 3
 factor_min_deltaT: 1
 
-min_states_deltaTp: 0 #20
 min_states_deltaT: 0  #15
 
 Ra: 0.5            # [m] Minimum radius of the first sphere
@@ -30,21 +27,20 @@ inflation_jps: 0.6  #[m] The obstacles are inflated (to run JPS) by this amount
 factor_jps: 1  #[m] JPS is run with resolution=factor_jps*(resolution of the map)
 
 
-v_max: 6.0   #[m/s]  1.4
+v_max: 6.5   #[m/s]  1.4
 a_max: 6.0   #[m/s2] 1.4
-j_max: 30.0  #[m/s3] 35
+j_max: 20.0  #[m/s3] 35
 
 z_land: 0.02 #[m] z goal for landing
 
-
 #Factors for time allocation
-gamma_whole: 10       #[-]
-gammap_whole: 10  #[-]
-increment_whole: 1 #[-]
+gamma_whole: 20       #[-]
+gammap_whole: 20  #[-]
+increment_whole: 0.1 #[-]
 
-gamma_safe: 10         #[-]
-gammap_safe: 10    #[-]
-increment_safe: 1   #[-]
+gamma_safe: 20         #[-]
+gammap_safe: 20    #[-]
+increment_safe: 0.1   #[-]
 
 max_poly_whole: 4 #Should be less than N_whole 
 max_poly_safe: 4 #Should be less than N_safe
@@ -61,10 +57,12 @@ kalpha: 3
 kv: 2
 kdist: 2
 
-delta_a: 0.7
-delta_H: 0.7
+delta_a: 1.0
+delta_H: 1.0
 
-use_faster: false  #if false, it will plan only in free space
+hack: 0.75
+
+use_faster: true  #if false, it will plan only in free space
 keep_optimizing_after_found: false #if true, the planner will keep optimizing after having found a trajectory (until the drone arrives at point A)
 use_smart_deltaT: false #if true, A will be tried be be chosen in R{k-1} (unless there is too little time remaining, given by factor_min_deltaT)
 
