--- a/faster/package.xml
+++ b/faster/package.xml
@@ -29,6 +29,8 @@
   <build_depend>decomp_util</build_depend>
   <build_depend>decomp_ros_utils</build_depend>
 
+  <build_depend>message_generation</build_depend>
+  <run_depend>message_runtime</run_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
