--- a/faster_msgs/CMakeLists.txt
+++ b/faster_msgs/CMakeLists.txt
@@ -50,6 +50,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_message_files(
   FILES
   Mode.msg
+  StringArray.msg
 )
 
 ## Generate services in the 'srv' folder
