added bbox to the trajectory msg

--- a/faster_msgs/CMakeLists.txt
+++ b/faster_msgs/CMakeLists.txt
@@ -50,7 +50,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_message_files(
   FILES
   Mode.msg
-  StringArray.msg
+  DynTraj.msg
 )
 
 ## Generate services in the 'srv' folder
