added kappa and mu, there are weird trajectories (because more time available to A*)

--- a/faster/param/faster.yaml
+++ b/faster/param/faster.yaml
@@ -51,9 +51,15 @@ samples_per_interval: 1
 weight: 10000.0 #The .0 is needed
 epsilon_tol_constraints: 0.01
 solver: "LD_MMA"
+
 #  // work:  //LD_MMA // //LN_NELDERMEAD // LN_SBPLX(fastest) //LN_PRAXIS(fastest) //LD_AUGLAG //LD_AUGLAG_EQ
 #  // don't work: LN_BOBYQA // LD_SLSQP //LN_NEWUOA //LN_NEWUOA_BOUND //LN_COBYLA
 #  // crash://LD_TNEWTON_PRECOND_RESTART //LD_TNEWTON_RESTART //LD_TNEWTON_PRECOND //LD_VAR1 //LD_VAR2 //LD_LBFGS_NOCEDAL
+
+
+#kappa + mu <=1 Ideally kappa + mu<1 (so that there is time for other stuff )
+kappa: 0.3 #% of time spent to find initial guess
+mu: 0.5    #% of time spent to solve the optimization
 
 
 #Parameters for the ground robot (jackal):
