--- a/faster/param/faster.yaml
+++ b/faster/param/faster.yaml
@@ -49,7 +49,9 @@ n_pol: 7
 deg: 3
 samples_per_interval: 1
 weight: 10000.0 #The .0 is needed
-epsilon_tol_constraints: 0.01
+epsilon_tol_constraints: 0.1
+xtol_rel: 0.01
+ftol_rel: 0.01
 solver: "LD_MMA"
 
 #  // work:  //LD_MMA // //LN_NELDERMEAD // LN_SBPLX(fastest) //LN_PRAXIS(fastest) //LD_AUGLAG //LD_AUGLAG_EQ
@@ -60,6 +62,8 @@ solver: "LD_MMA"
 #kappa + mu <=1 Ideally kappa + mu<1 (so that there is time for other stuff )
 kappa: 0.3 #% of time spent to find initial guess
 mu: 0.5    #% of time spent to solve the optimization
+
+
 
 
 #Parameters for the ground robot (jackal):
