--- a/faster/param/faster.yaml
+++ b/faster/param/faster.yaml
@@ -4,13 +4,14 @@ use_ff: true # use feedforward
 visual: true #publish visualization stuff
 dc: 0.01            #(seconds) Duration for the interpolation=Value of the timer pubGoal
 goal_radius: 0.3    #(m) Drone has arrived to the goal when distance_to_goal<GOAL_RADIUS
-drone_radius: 0.6  #(m) Used for collision checking
+drone_radius: 0.2  #(m) Used for collision checking
 
 N_whole: 6 #[-] Number of discretization points in the whole trajectory
 N_safe: 6 #[-] Number of discretization points in the safe path
 
-Ra: 3.5            # [m] Radius of the sphere S
-w_max: 1          # [rd/s] Maximum angular velocity. 0.4 for Hardware
+Ra: 4.0            # [m] Radius of my planning sphere (planning horizon)
+R_consider_others: 9.0       # [m] Other agents are considered if they are closer than Rothers. Should satify R_consider_others>=2*Ra (because this ensures that the other agent hasn't planned a trajetory that enters my sphere of radius Ra)
+w_max: 1           # [rd/s] Maximum angular velocity. 0.4 for Hardware
 alpha_filter_dyaw: 0 #was 0.92  #[] Filter parameter for dyaw, \in [0,1]. Higher--> More aggressive filtering
 
 z_ground: 0.2         #[m] points below this are considered ground
@@ -18,9 +19,15 @@ z_max: 2         #[m] JPS is not allowed to give a solution that goes higher tha
 inflation_jps: 0.35  #[m] The obstacles are inflated (to run JPS) by this amount
 factor_jps: 1  #[m] JPS is run with resolution=factor_jps*(resolution of the map)
 
-v_max: 7.0   #[m/s]  1.4
-a_max: 20.0   #[m/s2] 1.4
-j_max: 10.0  #[m/s3] 35
+#For multi-agent simulations
+# v_max: 3.5   #[m/s]  
+# a_max: 8.0   #[m/s2] 
+# j_max: 10.0  #[m/s3] 
+
+#For single-agent simulations
+v_max: 7.0   #[m/s]  7.0
+a_max: 20.0   #[m/s2] 20.0
+j_max: 10.0  #[m/s3] 10.0
 
 #Factors for time allocation
 gamma_whole: 20       #[-]
@@ -67,7 +74,9 @@ a_star_samp_x: 7
 a_star_samp_y: 7 
 a_star_samp_z: 7 
 
-basis: "B_SPLINE"  #MINVO OR B_SPLINE  This is the basis used only for collision checking
+basis: "MINVO"  #MINVO OR B_SPLINE  This is the basis used only for collision checking
+
+res_plot_traj: 50.0  #Higher --> More resolution when plotting the trajectory 
 
 # Parameters for the ground robot (jackal):
 # kw: 1
